# push-byceps-stats-to-discord

./: .dockerignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  config-example.toml  config_example.toml
.github/workflows/: docker-publish.yml  rust.yml
src/: byceps.rs  cli.rs  config.rs  discord.rs  logging.rs  main.rs
