[package]
name = "push-byceps-stats-to-discord"
version = "0.5.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.71.1"
description = "Push BYCEPS ticket sale stats to Discord (as channel name)"
readme = "README.md"
repository = "https://github.com/byceps/push-byceps-stats-to-discord"
license = "MIT"
keywords = ["discord"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.9", features = ["derive"] }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_with = "2.3.1"
simple_logger = { version = "4.0.0", features = ["colors", "timestamps"] }
toml = "0.7.3"
ureq = { version = "2.6.2", features = ["json"] }
