[package]
name = "push-byceps-stats-to-discord"
version = "0.7.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.81.0"
description = "Push BYCEPS ticket sale stats to Discord (as channel name)"
readme = "README.md"
repository = "https://github.com/byceps/push-byceps-stats-to-discord"
license = "MIT"
keywords = ["discord"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.19", features = ["derive"] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_with = "3.10.0"
simple_logger = { version = "5.0.0", features = ["colors", "timestamps"] }
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json"] }
